--- a/Azienda_Edile/Views/Payments/Index.cshtml
+++ b/Azienda_Edile/Views/Payments/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Azienda_Edile.Models.Pagamento>
 
 @{
-    ViewBag.Title = "EmployeePayment";
+    ViewBag.Title = "Index";
 }
 
-<h2>EmployeePayment</h2>
+<h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -26,7 +26,7 @@
         <th>
             @Html.DisplayNameFor(model => model.TipoPagamento)
         </th>
-        
+        <th></th>
     </tr>
 
 @foreach (var item in Model) {
@@ -46,7 +46,11 @@
         <td>
             @Html.DisplayFor(modelItem => item.TipoPagamento)
         </td>
-      
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+        </td>
     </tr>
 }
 
