--- a/Azienda_Edile/Views/Employee/CreateEmployee.cshtml
+++ b/Azienda_Edile/Views/Employee/CreateEmployee.cshtml
@@ -82,7 +82,9 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", "Employee", new { @*id_Employee = "value1", param2 = "value2"*@ }, new { @class = "btn btn-primary", title = "Go back to the list" })
+
+    @*@Html.ActionLink("Back to List", "Index")*@
 </div>
 
 @section Scripts {
